--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "lint": "^1.1.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-sanity": "^9.8.30",
